[gd_scene load_steps=7 format=3 uid="uid://bbbdofrbkb8gr"]

[ext_resource type="Script" path="res://main.gd" id="1_aha12"]
[ext_resource type="PackedScene" uid="uid://6lk5o27pcdq8" path="res://water_background.tscn" id="2_132xr"]
[ext_resource type="Texture2D" uid="uid://cqasogs1kfmo6" path="res://Sunny Land Collection Files/Packs/Characters/Chibi Enemies Pack/Sprites/Vulture/vulture2.png" id="3_3o665"]
[ext_resource type="Texture2D" uid="uid://yo1k7vh0wwmv" path="res://Sunny Land Collection Files/Packs/Characters/sunny-mushroom/sprites/breatth-attack/_0003_Layer-4.png" id="4_l6jnq"]
[ext_resource type="Texture2D" uid="uid://c46cdy4nsoi4x" path="res://Sunny Land Collection Files/Packs/Packs/Woods Pack/ENVIRONMENT/Props/Sprites/branch-01.png" id="5_b0brd"]

[sub_resource type="SystemFont" id="SystemFont_2t8b3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_aha12")

[node name="Start" type="Button" parent="."]
offset_left = 1591.0
offset_top = 92.0
offset_right = 1941.0
offset_bottom = 214.0
theme_override_fonts/font = SubResource("SystemFont_2t8b3")
theme_override_font_sizes/font_size = 65
text = "New Game"

[node name="Restart" type="Button" parent="."]
offset_left = 1591.0
offset_top = 250.0
offset_right = 1941.0
offset_bottom = 372.0
theme_override_fonts/font = SubResource("SystemFont_2t8b3")
theme_override_font_sizes/font_size = 65
text = "Continue"

[node name="Quit" type="Button" parent="."]
offset_left = 1590.0
offset_top = 416.0
offset_right = 1943.0
offset_bottom = 538.0
theme_override_font_sizes/font_size = 65
text = "Quit"

[node name="ParallaxBackground" parent="." instance=ExtResource("2_132xr")]

[node name="Vulture2" type="Sprite2D" parent="."]
position = Vector2(1594, 80)
scale = Vector2(3.21795, 2.96154)
texture = ExtResource("3_3o665")

[node name="0003Layer-4" type="Sprite2D" parent="."]
position = Vector2(1968, 333)
scale = Vector2(2.56349, 3.58108)
texture = ExtResource("4_l6jnq")

[node name="Branch-01" type="Sprite2D" parent="."]
position = Vector2(1605, 524)
scale = Vector2(1.46818, 1.1822)
texture = ExtResource("5_b0brd")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
